force-app/main/default/objects/SFA_Platform_Event__e/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>This is used to capture the object API name.</description>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>