force-app/main/default/objects/SFA_Platform_Event__e/fields/Old_Record_JSON__c.field-meta.xml
<CustomField>
    <fullName>Old_Record_JSON__c</fullName>
    <description>This is used to capture old record data values.</description>
    <label>Old Record JSON</label>
    <length>128000</length>
    <type>LongTextArea</type>
</CustomField>