force-app/main/default/objects/SFA_Platform_Event__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>This is used to capture the id of the record.</description>
    <label>Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>